--- a/k2g/src/main/resources/application.properties
+++ b/k2g/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=k2g
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/key2go
 spring.datasource.username=root
-spring.datasource.password=1225
+spring.datasource.password=vivek
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
