--- a/key2go/package.json
+++ b/key2go/package.json
@@ -13,7 +13,10 @@
     "@mui/material": "^6.4.7",
     "@mui/styles": "^6.4.7",
     "axios": "^1.8.2",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "font-awesome": "^4.7.0",
+    "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
