--- a/k2g/src/main/resources/application.properties
+++ b/k2g/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=vivek
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+disk.upload.basepath=C:/Users/Dell/OneDrive/Desktop/Key2go/images
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
