--- a/k2g/src/main/resources/application.properties
+++ b/k2g/src/main/resources/application.properties
@@ -2,11 +2,12 @@ spring.application.name=k2g
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/key2go
 spring.datasource.username=root
-spring.datasource.password=vivek
+spring.datasource.password=1225
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-disk.upload.basepath=C:/Users/Dell/OneDrive/Desktop/Key2go/images
+
+disk.upload.basepath=F:/FSD-Key2Go/image
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
